Fix numeric lists not showing numeral

--- a/static/css/base/_lists.scss
+++ b/static/css/base/_lists.scss
@@ -1,6 +1,5 @@
 ul,
 ol {
-  list-style-type: inherit;
   margin: 0 0 $small-spacing;
   padding: 0 0 0 1.5em;
 }
